# computer-vision

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.sh  setup_env.sh
homeworks/: homework_00.ipynb  homework_01.ipynb  homework_02.ipynb
notebooks/: about.ipynb  notebook_01.ipynb  notebook_02.ipynb  notebook_03.ipynb
src/: utils.py
