[project]
name = "computer-vision"
version = "0.1.0"
description = "deep learning for computer vision course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.10.8",
    "rootutils>=1.0.7",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "opencv-python-headless>=4.12.0.88",
    "livelossplot>=0.5.6",
    "jupyter>=1.1.1",
    "debugpy>=1.8.19",
]
